--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
     <title>Open Room - Chat Anonymously</title>
     <meta name="description" content="Join Open Room for real-time anonymous chat. Stay private, connect instantly, and chat freely." />
-    <meta name="keywords" content="anonymous chat, real-time chat, private messaging, Open Room chat,open room,open room by rajesh , oroom rajesh,get material oroom ,get material open room,rajesh,talagana rajesh" />
-    <meta name="author" content="Talagana Rajesh" />
+    <meta name="keywords" content="anonymous chat, real-time chat, private messaging, Open Room chat,open room,open room by Alisha , oroom rajesh,get material oroom ,get material open room,Alisha,Syed Ahmad Alisha" />
+    <meta name="author" content="Alisha" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.yourwebsite.com/" />
