--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Open Room - Chat Anonymously</title>
     <meta name="description" content="Join Open Room for real-time anonymous chat. Stay private, connect instantly, and chat freely." />
-    <meta name="keywords" content="anonymous chat, real-time chat, private messaging, Open Room chat,open room,open room by Alisha , oroom rajesh,get material oroom ,get material open room,Alisha,Syed Ahmad Alisha" />
+    <meta name="keywords" content="anonymous chat, real-time chat, private messaging, Open Room chat,open room,open room by Alisha , oroom Ahmad,get material oroom ,get material open room,Alisha,Syed Ahmad Alisha" />
     <meta name="author" content="Alisha" />
 
     <!-- Canonical URL -->
